[package]
name = "rust_asm"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = "2.5.0"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
